refactor: PageImpl 클래스로 페이지 정보 인터페이스를 함께 전달